fixed Character error